--- a/assets/style.css
+++ b/assets/style.css
@@ -82,85 +82,146 @@
         display: block;
     }
 
-    .container {
+    .main-container {
         display: grid;
-        grid-gap: 0px;
-        height: 800px;
         grid-template-columns: auto;
         grid-template-rows: auto;
         grid-template-areas:
-        "img",
-        "bio";
+        "header"
+        "photo"
+        "project"
+        "contact"
+        "footer";
     }
 
+    .top {
+        grid-area: header;
+    }
+
+    .container {
+        margin-top: 20px;
+        grid-area: photo;
+        display: flex;
+        flex-flow: column wrap;
+        background-color: black;
+    }
+
+
     .imgDiv {
-        grid-area: "img";
+        flex: 0 0 50%;
+    }
+
+    .thePic {
+        max-width: 100%;
+        max-height: 100%;
+        display: block; 
     }
 
     .bio {
-        grid-area: "bio";
         display: flex;
         justify-content: center;
         align-items: center;
     }
- 
-    .title-1 {
-        grid-area: "title";
-        display: flex;
-        justify-content: center;
+    
+    .text {
+        text-align: center;
+        color: white;
+    }
+
+    .name {
+        font-family: 'Dancing Script', cursive;
+        font-size: 50px;
+    }
+
+    .wallpaper {
+        background-image: url('../city.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
     }
 
     .projects {
-        display: grid;
-        height: 500px;
+        grid-area: project;
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
         width: 100%;
-        grid-gap: 5px;
-        grid-template-columns: auto;
-        grid-template-rows: auto;
-        grid-template-areas: 
-        "title"
-        "prog1"
-        "prog2"
-        "prog3";
-
     }
 
-    .prog1 {
-        grid-area: "prog1";
-    }
+    .progs {
+        flex: 0 0 100%;
+        position: relative;
+        width: 50%;
+        padding: 10px;
+      }
 
-    .prog2 {
-        grid-area: "prog2";
-    }
 
-    .prog3 {
-        grid-area: "prog3";
-    }
+      
+      .image {
+        opacity: 1;
+        display: block;
+        width: 100%;
+        height: auto;
+        transition: .5s ease;
+        backface-visibility: hidden;
+      }
+      
+      .middle {
+        transition: .5s ease;
+        opacity: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        text-align: center;
+      }
+      
+      .progs:hover .image {
+        opacity: .7;
+      }
+      
+      .progs:hover .middle {
+        opacity: 2;
+      }
+      
+      .text4 {
+        color: white;
+        font-size: 16px;
+        padding: 16px 32px;
+      }
 
     .contact {
+        grid-area: contact;
         display: grid;
         grid-gap: 0px;
         height: 500px;
-        width: 100%;
         grid-template-columns: auto;
         grid-template-rows: auto;
         grid-template-areas:
-        "addy",
+        "addy"
         "info";
+        background-color: black;
+
     }
 
     .infoSec {
-        grid-area: "info";
+        grid-area: info;
+        display: flex;
+        /* justify-content: center; */
+        align-items: center;
     }
 
     .addy {
-        grid-area: "addy";
+        grid-area: addy;
         display: flex;
         justify-content: center;
     }
 
     .footer {
-        grid-area: "footer";
+        grid-area: footer;
         height: 150px;
         display: flex;
         justify-content: center;
@@ -181,30 +242,23 @@
     }
 
     .container {
-        grid-template-areas:
-        "img bio";
+        display: flex;
+        flex-flow: row wrap;
     }
 
     .imgDiv {
-        grid-area: "img";
-    }
-    
-    .title-1 {
-        grid-area: "title";
+        flex: 0 0 50%;
     }
 
-    .bio {
-        grid-area: "bio";
-    }
 
     .projects {
-        grid-gap: 8px;
-        grid-template-columns: 2fr 2fr 2fr;
-        grid-template-rows: auto;
-        grid-area: 
-        "... title ...",
-        "prog1 prog2 prog3";
+        display: flex;
+        flex-flow: row wrap;
+        /* height: 700px; */
+    }
 
+    .progs {
+        flex: 0 0 25.3%;
     }
  
     .contact {
