--- a/assets/style.css
+++ b/assets/style.css
@@ -158,6 +158,12 @@
         padding: 10px;
       }
 
+    .picss {
+        width:  300px;
+        height: 300px;
+        object-fit: cover;
+    }
+
     .prog-top {
         padding-top: auto;
     }
@@ -184,7 +190,7 @@
       }
       
       .progs:hover .image {
-        opacity: .7;
+        opacity: .4;
       }
       
       .progs:hover .middle {
@@ -214,14 +220,33 @@
     .infoSec {
         grid-area: info;
         display: flex;
-        /* justify-content: center; */
-        align-items: center;
+        justify-content: center;
+        /* align-items: center; */
+    }
+
+    .inputSec {
+        padding-top: 40px;
     }
 
     .addy {
         grid-area: addy;
         display: flex;
         justify-content: center;
+    }
+
+    .contact-text {
+        color: white;
+        text-align: center;
+    }
+
+    .name2 {
+        font-family: 'EB Garamond', serif;
+        font-size: 40px;
+        margin-bottom: 20px;
+    }
+
+    .contact-info {
+        font-family: 'EB Garamond', serif;
     }
 
     .myMap {
@@ -240,6 +265,10 @@
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+
+    .icons {
+        padding: 2px;
     }
 
 @media(min-width: 769px) {
