--- a/assets/style.css
+++ b/assets/style.css
@@ -159,7 +159,7 @@
     .projects {
         grid-area: project;
         display: flex;
-        flex-flow: column wrap;
+        flex-flow: row wrap;
         justify-content: center;
         align-items: center;
         height: 100%;
@@ -174,8 +174,8 @@
       }
 
     .picss {
-        width:  300px;
-        height: 300px;
+        width:  200px;
+        height: 200px;
         object-fit: cover;
     }
 
@@ -185,7 +185,7 @@
 
       
       .image {
-        opacity: 1;
+        opacity: .5;
         display: block;
         width: 100%;
         height: auto;
@@ -205,7 +205,7 @@
       }
       
       .progs:hover .image {
-        opacity: .4;
+        opacity: .9;
       }
       
       .progs:hover .middle {
